# long-bench-eval

./: .gitignore  CLAUDE.md  LONGBENCH_V2_DATASET_SUMMARY.md  README.md  compare_results.py  pyproject.toml  run_bench.sh  test_extraction.py
long_bench_eval/: __init__.py  cli.py  simple_eval_common.py  simple_eval_longbench_v2.py
longbench_v2/: long_qwen.py  longbench_v2_evaluation.md  test_longbench_v2_eval.py  validate_longbench_v2.py  validate_longbench_v2_standalone.py
scripts/: run_deepseek_longbench_eval.py
tasks/deterministic_eval/: README.md
vibe_long_bench/: __init__.py  simple_eval_common.py  simple_eval_longbench_v2.py
